# frcc

./: .gitignore  .gitmodules  README.md  build.sh
cmake/: CMakeLists.txt  frcc_common.cmake  frcc_test.cmake  utils.cmake
include/: optimizer.h  pass.h  pass_manager.h  pass_register.h
include/passes/: eliminate_identity_pass.h  vanilla_remove_identity_pass.h
src/: optimizer.cc  pass.cc  pass_manager.cc
test/: utils.h  vanilla_remove_identity_pass_test.cc  vanilla_test.cc
tools/: build.py
